Correct spacing of news dates

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -139,7 +139,7 @@ nav.navbar-dark {
       .date {
         display: inline-block;
         position: absolute;
-        right: 0;
+        right: 1rem;
         color: #00000066;
       }
     }
